@@ -40,6 +40,8 @@ class UserPreferences(object):
     style = ''
     custom_style = False
     period_save = True
+    spaces_instead_of_tabs = False
+    tab_width = 8
 
     def __init__(self):
         self.load()
@@ -53,7 +55,10 @@ class UserPreferences(object):
         cp.smart_get(self, 'writer')
         cp.smart_get(self, 'style')
         cp.smart_get(self, 'custom_style', smart_bool)
+
         cp.smart_get(self, 'period_save', smart_bool, 'editor')
+        cp.smart_get(self, 'spaces_instead_of_tabs', smart_bool, 'editor')
+        cp.smart_get(self, 'tab_width', int, 'editor')
 
     def save(self):
         cp = SmartParser()
@@ -65,6 +70,9 @@ class UserPreferences(object):
         cp.set('main', 'custom_style', str(self.custom_style))
         cp.add_section('editor')
         cp.set('editor', 'period_save', str(self.period_save))
+        cp.set('editor', 'spaces_instead_of_tabs',
+               str(self.spaces_instead_of_tabs))
+        cp.set('editor', 'tab_width', str(self.tab_width))
 
         directory = get_user_config_dir()
         if not exists(directory):
